@@ -1,3 +1,8 @@
+ags (2.0.18)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed audio export's bad behaviour on sequencer termination after
+
 ags (2.0.17)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
